// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getNormalizedConfig > should get config from specified JS/TS file 1`] = `
{
  "config": {
    "rules": {
      "block-no-empty": [
        true,
        {
          "severity": "error",
        },
      ],
      "color-no-invalid-hex": [
        true,
        {
          "severity": "error",
        },
      ],
      "no-descending-specificity": [
        true,
        {
          "severity": "error",
        },
      ],
      "no-invalid-double-slash-comments": [
        true,
        {
          "severity": "error",
        },
      ],
    },
  },
  "filepath": "/Users/michael_hladky/WebstormProjects/quality-metrics-cli/packages/plugin-stylelint/mocks/fixtures/get-normalized-config/index.ts",
}
`;

exports[`getNormalizedConfig > should get config from specified JSON file 1`] = `
{
  "config": {
    "// we are disabling the lint because stylelint converts true to [] ": null,
    "rules": {
      "block-no-empty": null,
      "color-no-invalid-hex": [
        true,
      ],
      "no-descending-specificity": [
        true,
        {
          "severity": "error",
        },
      ],
      "no-invalid-double-slash-comments": [
        true,
        {
          "severity": "error",
        },
      ],
    },
  },
  "filepath": "/Users/michael_hladky/WebstormProjects/quality-metrics-cli/packages/plugin-stylelint/mocks/fixtures/get-normalized-config/.stylelintrc.json",
}
`;
